--- a/src/app/coffee/coffee-list/coffee-list.component.html
+++ b/src/app/coffee/coffee-list/coffee-list.component.html
@@ -1,12 +1,7 @@
 <div class="container mt-4 text-start">
   <h1 class="mb-3">El aroma mágico</h1>
   <hr class="mb-4" />
-  <img
-    src="https://images.unsplash.com/photo-1509042239860-f550ce710b93"
-    alt="Coffee beans"
-    class="img-fluid rounded mb-4"
-    style="max-height:300px; object-fit:cover;"
-  />
+  <img src="../../assets/images/header-coffee.png" alt="Coffee header" class="img-fluid rounded mb-4" />
 
   <div class="table-responsive">
     <!-- w-auto para ajustar ancho, pero sin mx-auto -->
