feat: se añade suma de total de cafes

--- a/src/app/coffee/coffee-list/coffee-list.component.html
+++ b/src/app/coffee/coffee-list/coffee-list.component.html
@@ -23,6 +23,11 @@
       </tbody>
     </table>
   </div>
+  <div class="mt-2">
+    <p>Total café de origen: {{ originCount }}</p>
+    <p>Total café blend: {{ blendCount }}</p>
+  </div>
+  
 
   <footer class="text-center mt-5 small text-muted">
     Contact us: +57 3102105253 — {{ 'info@elaromamagico.com —  @elaromamagico' }}
